--- a/.github/ISSUE_TEMPLATE/정책-변경-작업-이슈.md
+++ b/.github/ISSUE_TEMPLATE/정책-변경-작업-이슈.md
@@ -6,6 +6,11 @@ labels: ["policy"]
 assignees: []
 ---
 
+## 이슈 생성 기준 체크
+- [ ] 정책/요구사항/운영 기준 변경
+- [ ] 사용자 영향 기능 변경 또는 장애/보안/데이터 정합성 대응
+- [ ] 중간 이상 규모 작업(다수 파일/다중 커밋 예상)
+
 ## 배경
 <!-- 왜 이 작업이 필요한지 작성해 주세요. -->
 
